fixed gallery text layout issues

--- a/wp-content/themes/statybulygmuo/assets/sass/sections/_gallery.scss
+++ b/wp-content/themes/statybulygmuo/assets/sass/sections/_gallery.scss
@@ -106,18 +106,6 @@
                 }
             }
 
-            .gallery-date-wrapper {
-                margin-top: 100px;
-
-                @include media-breakpoint-down(lg) {
-                    margin-top: 50px;
-                }
-
-                @include media-breakpoint-down(md) {
-                    margin-top: 30px;
-                }
-            }
-
             .next-story-wrapper {
                 position: absolute;
                 right: 335px;
